add node classification exp